Adjusted Header, Navbar, ArticlesList, ArticleCard and SortArticles layout for better mobile responsiveness. Refactored ArticlesList layout to separate the SortArticles dropdown and article cards using a flexbox container. Ensured SortArticles aligns to the right while the Articles heading remains on the left. Improved overall alignment and responsiveness for different screen sizes.

--- a/src/App.css
+++ b/src/App.css
@@ -5,29 +5,6 @@ body {
   background-color: #f2f2f2 !important;
 }
 
-.App {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: min-content auto;
-  grid-template-areas:
-    "header"
-    "nav"
-    "content";
-  background-color: #f2f2f2 !important;
-  min-height: 100vh;
-}
-
-@media only screen and (min-width: 600px) {
-  .App {
-    grid-template-columns: 1fr;
-    grid-template-rows: min-content min-content auto;
-    grid-template-areas:
-      "header"
-      "nav"
-      "content";
-  }
-}
-
 .navbar-custom {
   background-color: #012e40;
   border: none;
@@ -70,15 +47,9 @@ body {
 .content-container {
   grid-area: content;
   padding: 1rem;
-  margin-top: 2rem; 
 }
 
 .mt-3 {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
-@media (max-width: 300px) {
-  .header-container .form-control {
-    width: 80%; 
-  }
-}
